Fix timer on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -402,22 +402,16 @@
     float: left; 
 }
 
-.timer-box {
-    border-style: solid;
-    border-width: 5px;
-    border-color: $latte-color-light;    
-    border-radius: 200px;
-    display: table;
-}
-
-
 #countdown{
 	// font-family: sans-serif;
 	color: $latte-color-light;
 	display: inline-block;
 	font-weight: 100;
 	text-align: center;
-	font-size: 30px;
+    font-size: 30px;
+    @include media-query($on-palm) {   
+        font-size: 16px;
+    }
 }
 
 #countdown > div{
@@ -432,4 +426,7 @@
 	border-radius: 3px;
 	background: $brand-color;
 	display: inline-block;
+    @include media-query($on-palm) {   
+        padding: 10px;
+    }
 }
